# Projektentwurf-Gruppe-F

code_4_exam/: CMakeLists.txt
code_4_exam/include/: developer.h  developer_group.h
code_4_exam/src/: developer.c  developer_group.c  main.c
